Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -853,7 +853,7 @@ msgstr "Establecido por la variable de entorno :envvar:`__PYVENV_LAUNCHER__`."
 
 #: ../Doc/c-api/init_config.rst:551
 msgid "Set from :c:member:`PyConfig.executable` if ``NULL``."
-msgstr "Establecer desde :c:member:`PyConfig.executable` si ``NULL``."
+msgstr "Establecido desde :c:member:`PyConfig.executable` si ``NULL``."
 
 #: ../Doc/c-api/init_config.rst:559
 msgid ":data:`sys.base_prefix`."
@@ -889,7 +889,7 @@ msgid ""
 "If equals to 1, issue a warning when comparing :class:`bytes` or :class:"
 "`bytearray` with :class:`str`, or comparing :class:`bytes` with :class:`int`."
 msgstr ""
-"Si es igual a 1, emita una advertencia al comparar :class:`bytes` o :class:"
+"Si es igual a 1, emite una advertencia al comparar :class:`bytes` o :class:"
 "`bytearray` con :class:`str`, o al comparar :class:`bytes` con :class:`int`."
 
 #: ../Doc/c-api/init_config.rst:583
@@ -897,7 +897,7 @@ msgid ""
 "If equal or greater to 2, raise a :exc:`BytesWarning` exception in these "
 "cases."
 msgstr ""
-"Si es igual o mayor a 2, genere una excepción :exc:`BytesWarning` en estos "
+"Si es igual o mayor a 2, lanza una excepción :exc:`BytesWarning` en estos "
 "casos."
 
 #: ../Doc/c-api/init_config.rst:586
@@ -919,7 +919,7 @@ msgid ""
 "Control the validation behavior of hash-based ``.pyc`` files: value of the :"
 "option:`--check-hash-based-pycs` command line option."
 msgstr ""
-"Controle el comportamiento de validación de archivos ``.pyc`` basados ​​en "
+"Controla el comportamiento de validación de archivos ``.pyc`` basados ​​en "
 "hash: valor de la opción de línea de comando :option:`--check-hash-based-"
 "pycs`."
 
@@ -932,7 +932,7 @@ msgid ""
 "``L\"always\"``: Hash the source file for invalidation regardless of value "
 "of the 'check_source' flag."
 msgstr ""
-"``L\"always\"``: Hash el archivo fuente para invalidación independientemente "
+"``L\"always\"``: Calcula el hash el archivo fuente para invalidación independientemente "
 "del valor de la marca 'check_source'."
 
 #: ../Doc/c-api/init_config.rst:608
@@ -1009,7 +1009,7 @@ msgid ""
 "the :option:`configure --with-trace-refs option <--with-trace-refs>`."
 msgstr ""
 "Necesita una compilación especial de Python con la macro ``Py_TRACE_REFS`` "
-"definida: consulte :option:`configure --with-trace-refs option <--with-trace-"
+"definida: consulte la :option:`opción de configure --with-trace-refs option <--with-trace-"
 "refs>`."
 
 #: ../Doc/c-api/init_config.rst:650
@@ -1049,7 +1049,7 @@ msgid ""
 ":term:`Filesystem encoding <filesystem encoding and error handler>`: :func:"
 "`sys.getfilesystemencoding`."
 msgstr ""
-":term:`Filesystem encoding <filesystem encoding and error handler>`: :func:"
+":term:`Codificación del sistema de archvios <filesystem encoding and error handler>`: :func:"
 "`sys.getfilesystemencoding`."
 
 #: ../Doc/c-api/init_config.rst:682
@@ -1116,7 +1116,7 @@ msgid ""
 ":term:`Filesystem error handler <filesystem encoding and error handler>`: :"
 "func:`sys.getfilesystemencodeerrors`."
 msgstr ""
-":term:`Filesystem error handler <filesystem encoding and error handler>`: :"
+":term:`Manejador de errores del sistema de archivos <filesystem encoding and error handler>`: :"
 "func:`sys.getfilesystemencodeerrors`."
 
 #: ../Doc/c-api/init_config.rst:709
@@ -1301,7 +1301,7 @@ msgid ""
 "Set to ``1`` if the :envvar:`PYTHONLEGACYWINDOWSSTDIO` environment variable "
 "is set to a non-empty string."
 msgstr ""
-"Establece en ``1`` si la variable de entorno :envvar:"
+"Establecido en ``1`` si la variable de entorno :envvar:"
 "`PYTHONLEGACYWINDOWSSTDIO` está establecida en una cadena no vacía."
 
 #: ../Doc/c-api/init_config.rst:816
@@ -1328,8 +1328,8 @@ msgid ""
 "The option is ignored if Python is :option:`configured using the --without-"
 "pymalloc option <--without-pymalloc>`."
 msgstr ""
-"La opción se ignora si Python es :option:`configured using the --without-"
-"pymalloc option <--without-pymalloc>`."
+"La opción se ignora si Python es :option:`configurado usando la opción --without-"
+"pymalloc <--without-pymalloc>`."
 
 #: ../Doc/c-api/init_config.rst:832
 msgid "Platform library directory name: :data:`sys.platlibdir`."
@@ -1347,8 +1347,8 @@ msgid ""
 "`configure --with-platlibdir option <--with-platlibdir>` (default: ``\"lib"
 "\"``)."
 msgstr ""
-"Predeterminado: valor de la macro ``PLATLIBDIR`` que establece el :option:"
-"`configure --with-platlibdir option <--with-platlibdir>` (predeterminado: ``"
+"Predeterminado: valor de la macro ``PLATLIBDIR`` que establece la :option:"
+"`opción configure --with-platlibdir <--with-platlibdir>` (predeterminado: ``"
 "\"lib\"``)."
 
 #: ../Doc/c-api/init_config.rst:846
@@ -1398,11 +1398,11 @@ msgstr "``0``: Optimizador de mirilla, configure ``__debug__`` en ``True``."
 #: ../Doc/c-api/init_config.rst:875
 msgid "``1``: Level 0, remove assertions, set ``__debug__`` to ``False``."
 msgstr ""
-"``1``: Level 0, elimina las aserciones, establece ``__debug__`` en ``False``."
+"``1``: Nivel 0, elimina las aserciones, establece ``__debug__`` en ``False``."
 
 #: ../Doc/c-api/init_config.rst:876
 msgid "``2``: Level 1, strip docstrings."
-msgstr "``2``: Level 1, elimina docstrings."
+msgstr "``2``: Nivel 1, elimina docstrings."
 
 #: ../Doc/c-api/init_config.rst:878
 msgid ""
@@ -1457,9 +1457,9 @@ msgid ""
 "regular Python parses :ref:`command line arguments <using-on-cmdline>`, and "
 "strip Python arguments from :c:member:`~PyConfig.argv`."
 msgstr ""
-"Si es igual a ``1``, analice :c:member:`~PyConfig.argv` de la misma forma "
-"que Python normal analiza :ref:`command line arguments <using-on-cmdline>` y "
-"elimine los argumentos de Python de :c:member:`~PyConfig.argv`."
+"Si es igual a ``1``, analiza :c:member:`~PyConfig.argv` de la misma forma "
+"que Python normal analiza :ref:`argumentos de línea de comando <using-on-cmdline>` y "
+"elimina los argumentos de Python de :c:member:`~PyConfig.argv`."
 
 #: ../Doc/c-api/init_config.rst:918
 msgid ""
@@ -1519,12 +1519,12 @@ msgstr ""
 
 #: ../Doc/c-api/init_config.rst:958
 msgid "If :func:`Py_SetProgramName` has been called, use its argument."
-msgstr "Si se ha llamado a :func:`Py_SetProgramName`, use su argumento."
+msgstr "Si se ha llamado a :func:`Py_SetProgramName`, usa su argumento."
 
 #: ../Doc/c-api/init_config.rst:959
 msgid "On macOS, use :envvar:`PYTHONEXECUTABLE` environment variable if set."
 msgstr ""
-"En macOS, use la variable de entorno :envvar:`PYTHONEXECUTABLE` si está "
+"En macOS, usa la variable de entorno :envvar:`PYTHONEXECUTABLE` si está "
 "configurada."
 
 #: ../Doc/c-api/init_config.rst:960
@@ -1532,14 +1532,14 @@ msgid ""
 "If the ``WITH_NEXT_FRAMEWORK`` macro is defined, use :envvar:"
 "`__PYVENV_LAUNCHER__` environment variable if set."
 msgstr ""
-"Si se define la macro ``WITH_NEXT_FRAMEWORK``, utilice la variable de "
+"Si se define la macro ``WITH_NEXT_FRAMEWORK``, utiliza la variable de "
 "entorno :envvar:`__PYVENV_LAUNCHER__` si está configurada."
 
 #: ../Doc/c-api/init_config.rst:962
 msgid ""
 "Use ``argv[0]`` of :c:member:`~PyConfig.argv` if available and non-empty."
 msgstr ""
-"Utilice ``argv[0]`` de :c:member:`~PyConfig.argv` si está disponible y no "
+"Utiliza ``argv[0]`` de :c:member:`~PyConfig.argv` si está disponible y no "
 "está vacío."
 
 #: ../Doc/c-api/init_config.rst:964
@@ -1547,7 +1547,7 @@ msgid ""
 "Otherwise, use ``L\"python\"`` on Windows, or ``L\"python3\"`` on other "
 "platforms."
 msgstr ""
-"De lo contrario, utilice ``L\"python\"`` en Windows o ``L\"python3\"`` en "
+"De lo contrario, utiliza ``L\"python\"`` en Windows o ``L\"python3\"`` en "
 "otras plataformas."
 
 #: ../Doc/c-api/init_config.rst:973
@@ -1627,7 +1627,7 @@ msgid ""
 "Need a :ref:`debug build of Python <debug-build>` (the ``Py_REF_DEBUG`` "
 "macro must be defined)."
 msgstr ""
-"Necesita un :ref:`debug build of Python <debug-build>` (se debe definir la "
+"Necesita una :ref:`compilación de depuración de Python <debug-build>` (se debe definir la "
 "macro ``Py_REF_DEBUG``)."
 
 #: ../Doc/c-api/init_config.rst:1033
@@ -1719,7 +1719,7 @@ msgstr ""
 
 #: ../Doc/c-api/init_config.rst:1076
 msgid "Otherwise, use the :term:`locale encoding`."
-msgstr "De lo contrario, use el :term:`locale encoding`."
+msgstr "De lo contrario, usa el :term:`locale encoding`."
 
 #: ../Doc/c-api/init_config.rst:1078
 msgid "Default error handler:"
@@ -1759,14 +1759,14 @@ msgstr ""
 
 #: ../Doc/c-api/init_config.rst:1098
 msgid "Use :ref:`environment variables <using-on-envvars>`?"
-msgstr "¿Utiliza :ref:`environment variables <using-on-envvars>`?"
+msgstr "¿Utiliza :ref:`variables de entorno <using-on-envvars>`?"
 
 #: ../Doc/c-api/init_config.rst:1100
 msgid ""
 "If equals to zero, ignore the :ref:`environment variables <using-on-"
 "envvars>`."
 msgstr ""
-"Si es igual a cero, ignore el :ref:`environment variables <using-on-"
+"Si es igual a cero, ignora las :ref:`variables de entorno <using-on-"
 "envvars>`."
 
 #: ../Doc/c-api/init_config.rst:1107
@@ -1891,7 +1891,7 @@ msgid ""
 msgstr ""
 "Si :c:member:`~PyConfig.parse_argv` no es cero, los argumentos de :c:member:"
 "`~PyConfig.argv` se analizan de la misma forma que Python normal analiza :"
-"ref:`command line arguments <using-on-cmdline>`, y los argumentos de Python "
+"ref:`argumentos de línea de comando <using-on-cmdline>`, y los argumentos de Python "
 "se eliminan de :c:member:`~PyConfig.argv`."
 
 #: ../Doc/c-api/init_config.rst:1174
