--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -932,8 +932,8 @@ msgid ""
 "``L\"always\"``: Hash the source file for invalidation regardless of value "
 "of the 'check_source' flag."
 msgstr ""
-"``L\"always\"``: Calcula el hash el archivo fuente para invalidación independientemente "
-"del valor de la marca 'check_source'."
+"``L\"always\"``: Calcula el hash el archivo fuente para invalidación "
+"independientemente del valor de la marca 'check_source'."
 
 #: ../Doc/c-api/init_config.rst:608
 msgid "``L\"never\"``: Assume that hash-based pycs always are valid."
@@ -1009,8 +1009,8 @@ msgid ""
 "the :option:`configure --with-trace-refs option <--with-trace-refs>`."
 msgstr ""
 "Necesita una compilación especial de Python con la macro ``Py_TRACE_REFS`` "
-"definida: consulte la :option:`opción de configure --with-trace-refs option <--with-trace-"
-"refs>`."
+"definida: consulte la :option:`opción de configure --with-trace-refs option "
+"<--with-trace-refs>`."
 
 #: ../Doc/c-api/init_config.rst:650
 msgid ""
@@ -1049,8 +1049,8 @@ msgid ""
 ":term:`Filesystem encoding <filesystem encoding and error handler>`: :func:"
 "`sys.getfilesystemencoding`."
 msgstr ""
-":term:`Codificación del sistema de archvios <filesystem encoding and error handler>`: :func:"
-"`sys.getfilesystemencoding`."
+":term:`Codificación del sistema de archvios <filesystem encoding and error "
+"handler>`: :func:`sys.getfilesystemencoding`."
 
 #: ../Doc/c-api/init_config.rst:682
 msgid "On macOS, Android and VxWorks: use ``\"utf-8\"`` by default."
@@ -1116,8 +1116,8 @@ msgid ""
 ":term:`Filesystem error handler <filesystem encoding and error handler>`: :"
 "func:`sys.getfilesystemencodeerrors`."
 msgstr ""
-":term:`Manejador de errores del sistema de archivos <filesystem encoding and error handler>`: :"
-"func:`sys.getfilesystemencodeerrors`."
+":term:`Manejador de errores del sistema de archivos <filesystem encoding and "
+"error handler>`: :func:`sys.getfilesystemencodeerrors`."
 
 #: ../Doc/c-api/init_config.rst:709
 msgid ""
@@ -1328,8 +1328,8 @@ msgid ""
 "The option is ignored if Python is :option:`configured using the --without-"
 "pymalloc option <--without-pymalloc>`."
 msgstr ""
-"La opción se ignora si Python es :option:`configurado usando la opción --without-"
-"pymalloc <--without-pymalloc>`."
+"La opción se ignora si Python es :option:`configurado usando la opción --"
+"without-pymalloc <--without-pymalloc>`."
 
 #: ../Doc/c-api/init_config.rst:832
 msgid "Platform library directory name: :data:`sys.platlibdir`."
@@ -1458,8 +1458,8 @@ msgid ""
 "strip Python arguments from :c:member:`~PyConfig.argv`."
 msgstr ""
 "Si es igual a ``1``, analiza :c:member:`~PyConfig.argv` de la misma forma "
-"que Python normal analiza :ref:`argumentos de línea de comando <using-on-cmdline>` y "
-"elimina los argumentos de Python de :c:member:`~PyConfig.argv`."
+"que Python normal analiza :ref:`argumentos de línea de comando <using-on-"
+"cmdline>` y elimina los argumentos de Python de :c:member:`~PyConfig.argv`."
 
 #: ../Doc/c-api/init_config.rst:918
 msgid ""
@@ -1627,8 +1627,8 @@ msgid ""
 "Need a :ref:`debug build of Python <debug-build>` (the ``Py_REF_DEBUG`` "
 "macro must be defined)."
 msgstr ""
-"Necesita una :ref:`compilación de depuración de Python <debug-build>` (se debe definir la "
-"macro ``Py_REF_DEBUG``)."
+"Necesita una :ref:`compilación de depuración de Python <debug-build>` (se "
+"debe definir la macro ``Py_REF_DEBUG``)."
 
 #: ../Doc/c-api/init_config.rst:1033
 msgid "Import the :mod:`site` module at startup?"
@@ -1891,8 +1891,8 @@ msgid ""
 msgstr ""
 "Si :c:member:`~PyConfig.parse_argv` no es cero, los argumentos de :c:member:"
 "`~PyConfig.argv` se analizan de la misma forma que Python normal analiza :"
-"ref:`argumentos de línea de comando <using-on-cmdline>`, y los argumentos de Python "
-"se eliminan de :c:member:`~PyConfig.argv`."
+"ref:`argumentos de línea de comando <using-on-cmdline>`, y los argumentos de "
+"Python se eliminan de :c:member:`~PyConfig.argv`."
 
 #: ../Doc/c-api/init_config.rst:1174
 msgid ""
