--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -1015,7 +1015,7 @@ msgstr ""
 "la persona que llama se cancela u otras excepciones, el código de limpieza "
 "asíncrono del generador se ejecutará y posiblemente generará excepciones o "
 "accederá a variables de contexto en un contexto inesperado, tal vez después "
-"de la vida útil de las tareas de las que depende. , o durante el cierre del "
+"de la vida útil de las tareas de las que depende, o durante el cierre del "
 "ciclo de eventos cuando se llama al gancho de recolección de basura del "
 "generador asíncrono. Para evitar esto, la persona que llama debe cerrar "
 "explícitamente el generador asíncrono llamando al método :meth:`~agen."
