Apply suggestions from code review

--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -1023,7 +1023,7 @@ msgstr ""
 
 #: ../Doc/reference/compound_stmts.rst:742
 msgid "AS Patterns"
-msgstr "Como patrones"
+msgstr "patrones AS"
 
 #: ../Doc/reference/compound_stmts.rst:744
 msgid ""
@@ -1640,7 +1640,7 @@ msgid ""
 "If the returned value is not a tuple, the conversion fails and :exc:"
 "`TypeError` is raised."
 msgstr ""
-"Si el valor devuelto no es una tupla, la conversión falla y se genera :exc:"
+"Si el valor retornado no es una tupla, la conversión falla y se genera :exc:"
 "`TypeError`."
 
 #: ../Doc/reference/compound_stmts.rst:1065
